src/dist2/idkParser.py
# Generated from idk.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class idkParser ( Parser ):

    grammarFileName = "idk.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'|'", "'pwd'", "'cd'", "'echo'", 
                     "'ls'", "'cat'", "'head'", "'tail'", "'grep'", "'<'", 
                     "'>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "APPLICATIONS", "NEW_LINE", "QUOTES", 
                      "NON_NEWLINE", "NON_SINGLE_QUOTE", "NON_BACK_QUOTE", 
                      "DOUBLE_QUOTE_CONTENT", "WHITESPACE", "QUOTED", "SINGLEQ", 
                      "BACKQ", "DOUBLEQ" ]

    RULE_command = 0
    RULE_pipe = 1
    RULE_call = 2
    RULE_applications = 3
    RULE_atom = 4
    RULE_argument = 5
    RULE_redirection = 6
    RULE_non_keyword = 7
    RULE_unquoted = 8

    ruleNames =  [ "command", "pipe", "call", "applications", "atom", "argument", 
                   "redirection", "non_keyword", "unquoted" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    APPLICATIONS=13
    NEW_LINE=14
    QUOTES=15
    NON_NEWLINE=16
    NON_SINGLE_QUOTE=17
    NON_BACK_QUOTE=18
    DOUBLE_QUOTE_CONTENT=19
    WHITESPACE=20
    QUOTED=21
    SINGLEQ=22
    BACKQ=23
    DOUBLEQ=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pipe(self):
            return self.getTypedRuleContext(idkParser.PipeContext,0)


        def call(self):
            return self.getTypedRuleContext(idkParser.CallContext,0)


        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(idkParser.CommandContext)
            else:
                return self.getTypedRuleContext(idkParser.CommandContext,i)


        def getRuleIndex(self):
            return idkParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)



    def command(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = idkParser.CommandContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_command, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 19
                self.pipe(0)
                pass

            elif la_ == 2:
                self.state = 20
                self.call()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 28
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = idkParser.CommandContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_command)
                    self.state = 23
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 24
                    self.match(idkParser.T__0)
                    self.state = 25
                    self.command(3) 
                self.state = 30
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PipeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(idkParser.CallContext)
            else:
                return self.getTypedRuleContext(idkParser.CallContext,i)


        def pipe(self):
            return self.getTypedRuleContext(idkParser.PipeContext,0)


        def getRuleIndex(self):
            return idkParser.RULE_pipe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPipe" ):
                listener.enterPipe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPipe" ):
                listener.exitPipe(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPipe" ):
                return visitor.visitPipe(self)
            else:
                return visitor.visitChildren(self)



    def pipe(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = idkParser.PipeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_pipe, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.call()
            self.state = 33
            self.match(idkParser.T__1)
            self.state = 34
            self.call()
            self._ctx.stop = self._input.LT(-1)
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = idkParser.PipeContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_pipe)
                    self.state = 36
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 37
                    self.match(idkParser.T__1)
                    self.state = 38
                    self.call() 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def applications(self):
            return self.getTypedRuleContext(idkParser.ApplicationsContext,0)


        def argument(self):
            return self.getTypedRuleContext(idkParser.ArgumentContext,0)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(idkParser.WHITESPACE)
            else:
                return self.getToken(idkParser.WHITESPACE, i)

        def non_keyword(self):
            return self.getTypedRuleContext(idkParser.Non_keywordContext,0)


        def QUOTED(self):
            return self.getToken(idkParser.QUOTED, 0)

        def redirection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(idkParser.RedirectionContext)
            else:
                return self.getTypedRuleContext(idkParser.RedirectionContext,i)


        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(idkParser.AtomContext)
            else:
                return self.getTypedRuleContext(idkParser.AtomContext,i)


        def getRuleIndex(self):
            return idkParser.RULE_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = idkParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.applications()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.applications()

                self.state = 46
                self.match(idkParser.WHITESPACE)
                self.state = 49
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 47
                    self.non_keyword()
                    pass

                elif la_ == 2:
                    self.state = 48
                    self.match(idkParser.QUOTED)
                    pass


                self.state = 51
                self.match(idkParser.WHITESPACE)
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==11 or _la==12:
                    self.state = 52
                    self.redirection()
                    self.state = 53
                    self.match(idkParser.WHITESPACE)
                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 60
                self.argument()
                self.state = 65
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 61
                        self.match(idkParser.WHITESPACE)
                        self.state = 62
                        self.atom() 
                    self.state = 67
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                self.state = 68
                self.match(idkParser.WHITESPACE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ApplicationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return idkParser.RULE_applications

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class HeadContext(ApplicationsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a idkParser.ApplicationsContext
            super().__init__(parser)
            self.com = None # Token
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHead" ):
                listener.enterHead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHead" ):
                listener.exitHead(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHead" ):
                return visitor.visitHead(self)
            else:
                return visitor.visitChildren(self)


    class CdContext(ApplicationsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a idkParser.ApplicationsContext
            super().__init__(parser)
            self.com = None # Token
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCd" ):
                listener.enterCd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCd" ):
                listener.exitCd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCd" ):
                return visitor.visitCd(self)
            else:
                return visitor.visitChildren(self)


    class TailContext(ApplicationsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a idkParser.ApplicationsContext
            super().__init__(parser)
            self.com = None # Token
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTail" ):
                listener.enterTail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTail" ):
                listener.exitTail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTail" ):
                return visitor.visitTail(self)
            else:
                return visitor.visitChildren(self)


    class GrepContext(ApplicationsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a idkParser.ApplicationsContext
            super().__init__(parser)
            self.com = None # Token
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrep" ):
                listener.enterGrep(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrep" ):
                listener.exitGrep(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrep" ):
                return visitor.visitGrep(self)
            else:
                return visitor.visitChildren(self)


    class LsContext(ApplicationsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a idkParser.ApplicationsContext
            super().__init__(parser)
            self.com = None # Token
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLs" ):
                listener.enterLs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLs" ):
                listener.exitLs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLs" ):
                return visitor.visitLs(self)
            else:
                return visitor.visitChildren(self)


    class CatContext(ApplicationsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a idkParser.ApplicationsContext
            super().__init__(parser)
            self.com = None # Token
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCat" ):
                listener.enterCat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCat" ):
                listener.exitCat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCat" ):
                return visitor.visitCat(self)
            else:
                return visitor.visitChildren(self)


    class EchoContext(ApplicationsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a idkParser.ApplicationsContext
            super().__init__(parser)
            self.com = None # Token
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEcho" ):
                listener.enterEcho(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEcho" ):
                listener.exitEcho(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEcho" ):
                return visitor.visitEcho(self)
            else:
                return visitor.visitChildren(self)


    class PwdContext(ApplicationsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a idkParser.ApplicationsContext
            super().__init__(parser)
            self.com = None # Token
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPwd" ):
                listener.enterPwd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPwd" ):
                listener.exitPwd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPwd" ):
                return visitor.visitPwd(self)
            else:
                return visitor.visitChildren(self)



    def applications(self):

        localctx = idkParser.ApplicationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_applications)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                localctx = idkParser.PwdContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                localctx.com = self.match(idkParser.T__2)
                pass
            elif token in [4]:
                localctx = idkParser.CdContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                localctx.com = self.match(idkParser.T__3)
                pass
            elif token in [5]:
                localctx = idkParser.EchoContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                localctx.com = self.match(idkParser.T__4)
                pass
            elif token in [6]:
                localctx = idkParser.LsContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                localctx.com = self.match(idkParser.T__5)
                pass
            elif token in [7]:
                localctx = idkParser.CatContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                localctx.com = self.match(idkParser.T__6)
                pass
            elif token in [8]:
                localctx = idkParser.HeadContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 77
                localctx.com = self.match(idkParser.T__7)
                pass
            elif token in [9]:
                localctx = idkParser.TailContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 78
                localctx.com = self.match(idkParser.T__8)
                pass
            elif token in [10]:
                localctx = idkParser.GrepContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 79
                localctx.com = self.match(idkParser.T__9)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def redirection(self):
            return self.getTypedRuleContext(idkParser.RedirectionContext,0)


        def argument(self):
            return self.getTypedRuleContext(idkParser.ArgumentContext,0)


        def getRuleIndex(self):
            return idkParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = idkParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_atom)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.redirection()
                pass
            elif token in [3, 4, 5, 6, 7, 8, 9, 10, 13, 16, 17, 18, 19, 21, 22, 23, 24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.argument()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTED(self, i:int=None):
            if i is None:
                return self.getTokens(idkParser.QUOTED)
            else:
                return self.getToken(idkParser.QUOTED, i)

        def unquoted(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(idkParser.UnquotedContext)
            else:
                return self.getTypedRuleContext(idkParser.UnquotedContext,i)


        def getRuleIndex(self):
            return idkParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = idkParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_argument)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 88
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 86
                    self.match(idkParser.QUOTED)
                    pass

                elif la_ == 2:
                    self.state = 87
                    self.unquoted()
                    pass


                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 32450552) != 0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RedirectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self):
            return self.getTypedRuleContext(idkParser.ArgumentContext,0)


        def WHITESPACE(self):
            return self.getToken(idkParser.WHITESPACE, 0)

        def getRuleIndex(self):
            return idkParser.RULE_redirection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRedirection" ):
                listener.enterRedirection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRedirection" ):
                listener.exitRedirection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRedirection" ):
                return visitor.visitRedirection(self)
            else:
                return visitor.visitChildren(self)




    def redirection(self):

        localctx = idkParser.RedirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_redirection)
        self._la = 0 # Token type
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.match(idkParser.T__10)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==20:
                    self.state = 93
                    self.match(idkParser.WHITESPACE)


                self.state = 96
                self.argument()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(idkParser.T__11)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==20:
                    self.state = 98
                    self.match(idkParser.WHITESPACE)


                self.state = 101
                self.argument()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_keywordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEW_LINE(self, i:int=None):
            if i is None:
                return self.getTokens(idkParser.NEW_LINE)
            else:
                return self.getToken(idkParser.NEW_LINE, i)

        def SINGLEQ(self, i:int=None):
            if i is None:
                return self.getTokens(idkParser.SINGLEQ)
            else:
                return self.getToken(idkParser.SINGLEQ, i)

        def DOUBLEQ(self, i:int=None):
            if i is None:
                return self.getTokens(idkParser.DOUBLEQ)
            else:
                return self.getToken(idkParser.DOUBLEQ, i)

        def BACKQ(self, i:int=None):
            if i is None:
                return self.getTokens(idkParser.BACKQ)
            else:
                return self.getToken(idkParser.BACKQ, i)

        def getRuleIndex(self):
            return idkParser.RULE_non_keyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNon_keyword" ):
                listener.enterNon_keyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNon_keyword" ):
                listener.exitNon_keyword(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNon_keyword" ):
                return visitor.visitNon_keyword(self)
            else:
                return visitor.visitChildren(self)




    def non_keyword(self):

        localctx = idkParser.Non_keywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_non_keyword)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 104
                    _la = self._input.LA(1)
                    if _la <= 0 or ((_la) & ~0x3f) == 0 and ((1 << _la) & 29376518) != 0:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()

                else:
                    raise NoViableAltException(self)
                self.state = 107 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnquotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(idkParser.WHITESPACE)
            else:
                return self.getToken(idkParser.WHITESPACE, i)

        def NEW_LINE(self, i:int=None):
            if i is None:
                return self.getTokens(idkParser.NEW_LINE)
            else:
                return self.getToken(idkParser.NEW_LINE, i)

        def QUOTES(self, i:int=None):
            if i is None:
                return self.getTokens(idkParser.QUOTES)
            else:
                return self.getToken(idkParser.QUOTES, i)

        def getRuleIndex(self):
            return idkParser.RULE_unquoted

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnquoted" ):
                listener.enterUnquoted(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnquoted" ):
                listener.exitUnquoted(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnquoted" ):
                return visitor.visitUnquoted(self)
            else:
                return visitor.visitChildren(self)




    def unquoted(self):

        localctx = idkParser.UnquotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_unquoted)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 109
                    _la = self._input.LA(1)
                    if _la <= 0 or ((_la) & ~0x3f) == 0 and ((1 << _la) & 1103878) != 0:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()

                else:
                    raise NoViableAltException(self)
                self.state = 112 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[0] = self.command_sempred
        self._predicates[1] = self.pipe_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def command_sempred(self, localctx:CommandContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         

    def pipe_sempred(self, localctx:PipeContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 1)
         




